--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,11 +17,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
 <!-- expansion-panel -->
 <div class="sub-heading-1 text-center p-4 ">Expansion panel</div>
-  <ngt-expansion-panel >
+  <ngt-expansion-panel [backgroundColor]="'white'" (open)="onOpen($event)" (close)="onClose($event)" >
     <expansion-panel-title class="sub-heading-2" >header</expansion-panel-title>
     <div class="sub-heading-2">Body</div>
     <expansion-panel-footer>
-      <button style="float: right;" c2c-button class=" sub-heading-2 primaryBtn-sm">click</button>
+      <button style="float: right;" c2c-button class=" sub-heading-2 primaryBtn-sm" (click)="onClick($event)">click</button>
     </expansion-panel-footer>
   </ngt-expansion-panel>
 
