button component is reviewd

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,16 +10,17 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 
+<!-- <button mat-button>button</button> -->
 <!-- button starts here -->
-<ngt-button>
-
-  <Yourfeed-btn>
+<button ngt-button>button asdlkj flasdkjf lkasdfjlk sdjflksf</button>
+<!-- <ngt-button> -->
+  <!-- <Yourfeed-btn>
     <button [style.background-color]="YourfeedBtnColor" [style.height]="YourfeedBtnHeight"
       [style.width]="YourfeedBtnWidth" class="btn block mx-auto shadowfocus:shadow-outline focus:outline-none 
       text-md  text-white  rounded-md shadow-sm	  font-semibold  btn ripple">
       Your Feed
     </button>
-  </Yourfeed-btn>
+  </Yourfeed-btn> -->
 
   <confirm-btn>
     <button [style.background-color]="confirmBtnColor" [style.height]="confirmBtnHeight" [style.width]="confirmBtnWidth"
@@ -84,7 +85,7 @@
     </button>
   </CreateChallenge-btn>
 
-</ngt-button>
+<!-- </ngt-button> -->
 <!-- button ends here -->
 
 
