--- a/src/app/ngt-components/button/button.component.html
+++ b/src/app/ngt-components/button/button.component.html
@@ -1,7 +1,7 @@
 <div class="p-10">
-    <div class="grid grid-cols-3 gap-4">
-        <div class="p-10">
-            <ng-content select="Yourfeed-btn"></ng-content>
+    <!-- <div class="grid grid-cols-3 gap-4"> -->
+        <div class="p-10" style="background-color: green;" >
+            <ng-content select="[ngt-button]"></ng-content>
         </div>
         <div class="p-10">
             <ng-content select="confirm-btn"></ng-content>
@@ -27,5 +27,5 @@
         <div class="p-10">
             <ng-content select="CreateChallenge-btn"></ng-content>
         </div>
-    </div>
+    <!-- </div> -->
 </div>
