unnecessary code in button component is removed

--- a/src/app/ngt-components/button/button.component.html
+++ b/src/app/ngt-components/button/button.component.html
@@ -1,31 +1,1 @@
-<div class="p-10">
-    <!-- <div class="grid grid-cols-3 gap-4"> -->
-        <div class="p-10" style="background-color: green;" >
-            <ng-content select="[ngt-button]"></ng-content>
-        </div>
-        <div class="p-10">
-            <ng-content select="confirm-btn"></ng-content>
-        </div>
-        <div class="p-10">
-            <ng-content select="post-btn"></ng-content>
-        </div>
-        <div class="p-10">
-            <ng-content select="contact-btn"></ng-content>
-        </div>
-        <div class="p-10">
-            <ng-content select="next-btn"></ng-content>
-        </div>
-        <div class="p-10">
-            <ng-content select="delete-btn"></ng-content>
-        </div>
-        <div class="p-10">
-            <ng-content select="selectquestions-btn"></ng-content>
-        </div>
-        <div class="p-10">
-            <ng-content select="Newclans-btn"></ng-content>
-        </div>
-        <div class="p-10">
-            <ng-content select="CreateChallenge-btn"></ng-content>
-        </div>
-    <!-- </div> -->
-</div>
+<!-- template is not required -->
