button component finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,24 @@
 
 <!-- <button mat-button>button</button> -->
 <!-- button starts here -->
-<button ngt-button>button asdlkj flasdkjf lkasdfjlk sdjflksf</button>
+<div>
+<button ngt-button >Default</button>
+<button ngt-button style="background-color: #0080F3;color:#FFFFFF;width:120px">Your Feed</button>
+<button ngt-button style="background-color: #0080F3;color:#FFFFFF;width:118px;padding:5px 5px 5px 5px">Confirm</button>
+<button ngt-button style="background-color: #0080F3;color:#FFFFFF;padding:5px 5px 5px 5px;width:70px">Post</button>
+<button ngt-button style="background-color: #0080F3;color:#FFFFFF;width:118px;padding:5px 5px 5px 5px">Contact</button>
+<button ngt-button style="background-color: #0080F3;color:#FFFFFF;padding:7px 7px 7px 7px;width:60px;border-radius:5px;">Next</button>
+<button ngt-button style="background-color: #2DCE89;color:#FFFFFF;width:300px;display: flex;flex-direction: row;align-items: center;">
+  <span><img src="../assets/buttonplusicon.svg"> </span> <span style="margin-left: 15px;">Create Challenge</span>
+</button>
+<button ngt-button style="background-color: #EFEFEF;color:#949494;width:118px;padding:4px 4px 4px 4px">Delete</button>
+<button ngt-button style="background-color:#EFEFEF;color:#000000;width:175px;padding:7px 7px 7px 7px">Select Questions</button>
+<button ngt-button style="background-color: #EFEFEF;color:#949494;width:120px">New Clans</button>
+</div>
 
 
 
 
-
-<!-- input component example  -->
-<!-- input should be implemented like this: -->
-<!-- <input ngt-input  type="text" formControlName="xxxxxx"....../> -->
-<!--        ^^^^^^^^^      -->
 <ngt-input
   bgColor="#fff"
   fontcolor="orange"
