input component done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,12 @@
 </div>
 
 
+<div>
+  <input ngt-input placeholder="code" style="margin-left: 40px;">
+  <input ngt-input style="background-color: #2DCE89;color:#FFFFFF;width:120px;margin-left: 40px;" placeholder="connect"> <br>
+</div>
 
-
-<ngt-input
+<!-- <ngt-input
   bgColor="#fff"
   fontcolor="orange"
   c2cplaceholder="input field with emoji and password type"
@@ -36,6 +39,6 @@
   emojino="3"
   c2ctype="text"
   c2cname="pradeep1"
-></ngt-input>
+></ngt-input> -->
 
 <!--[Inputtype]="false" to check input type  -->
