--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,187 +1,23 @@
-<!-- <c2c-card>
-
-  <img c2c-card-avatar
-    src="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2Fyc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80">
-
-  <c2c-card-title>Title 123</c2c-card-title>
-  <c2c-card-content>This is my card desc</c2c-card-content>
-
-</c2c-card> -->
-
-<ngt-dropdown>
-  <!-- code for programming dropdown in selector ngt-dropdown-programmig -->
-  <ngt-dropdown-programmig>
-    <div class="relative pl-32 py-16 inline-block text-left ">
-      <div (click)="toggleShowDiv('Python Programming')" (click)="onSwitch('programs')">
-        <button
-          class="inline-flex justify-center w-full bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2  text-sm font-medium font-sans  focus:outline-none "
-          id="options-menu" aria-haspopup="true" aria-expanded="true">
-          <input type="text" [disabled]="true" name="fieldName" class=" text-white bg-blue cursor-pointer font-sans"
-            ngDefaultControl [(ngModel)]="singleelementofdropdownarrprogram">
-            <img [@animationRotate]="programStatus"  class="h-5 w-5" src="../../../assets/arrownewwhite.svg">
-        </button>
-      </div>
-      <div [@slideInOut]="animationState">
-        <div class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white  focus:outline-none">
-          <div (click)="changeoption(values)" *ngFor="let values of dropDownarrProgram" class="py-1 " role="menu"
-            aria-orientation="vertical" aria-labelledby="options-menu">
-            <a class="block px-4 py-2 text-sm text-gray-700 font-sans hover:bg-gray-100 hover:text-gray-900 cursor-pointer"
-              role="menuitem">{{values}}</a>
-          </div>
-        </div>
+<div>
+<div ngt-select class="relative pl-32 py-16 inline-block text-left ">
+  <div (click)="toggleShowDiv('Python Programming')" (click)="onSwitch('programs')">
+    <button
+      class="inline-flex justify-center w-full bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2  text-sm font-medium font-sans  focus:outline-none "
+      id="options-menu" aria-haspopup="true" aria-expanded="true">
+      <input type="text" [disabled]="true" name="fieldName" class=" text-white bg-blue cursor-pointer font-sans"
+        ngDefaultControl [(ngModel)]="singleelementofdropdownarrprogram">
+        <img [@animationRotate]="programStatus"  class="h-5 w-5" src="../../../assets/arrownewwhite.svg">
+    </button>
+  </div>
+  <div [@slideInOut]="animationState">
+    <div class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white  focus:outline-none">
+      <div (click)="changeoption(values)" *ngFor="let values of dropDownarrProgram" class="py-1 " role="menu"
+        aria-orientation="vertical" aria-labelledby="options-menu">
+        <a class="block px-4 py-2 text-sm text-gray-700 font-sans hover:bg-gray-100 hover:text-gray-900 cursor-pointer"
+          role="menuitem">{{values}}</a>
       </div>
     </div>
-  </ngt-dropdown-programmig>
-  <!-- End for code for programming dropdown in selector ngt-dropdown-programmig -->
+  </div>
+</div>
+</div>
 
-
-
-  <!-- code for New dropdown in selector ngt-dropdown-New -->
-  <ngt-dropdown-New>
-    <div class="relative pl-64 py-16 inline-block text-left">
-      <div (click)="toggleShowDiv('New')" (click)="onSwitch('new')" class="w-28 ">
-        <button
-          class="flex flex-row justify-center w-full bg-gray-100 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-sm font-medium font-sans  text-gray-700 focus:outline-none "
-          id="options-menu" aria-haspopup="true" aria-expanded="true">
-          <input type="text" [disabled]="true" name="fieldName" class="w-full text-black-200 font-sans  cursor-pointer"
-            ngDefaultControl [(ngModel)]="singleelementofdropDownforNew">
-            <img [@animationRotate]="newStatus"  class=" h-5 w-5" src="../../../assets/arrownew.svg">
-        </button>
-      </div>
-      <div [@slideInOut]="animationfornewdropdown"
-        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white font-sans  ">
-        <div (click)="changeoptionNew(values)" *ngFor="let values of dropDownforNew" class="py-1" role="menu"
-          aria-orientation="vertical" aria-labelledby="options-menu">
-          <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
-            role="menuitem">{{values}}</a>
-        </div>
-      </div>
-    </div>
-  </ngt-dropdown-New>
-  <!--End for code for New dropdown in selector ngt-dropdown-New -->
-
-
-  <!-- code for Clans dropdown in selector ngt-dropdown-clans -->
-  <ngt-dropdown-clans>
-    <div class="relative pl-64 py-16 inline-block text-left ">
-      <div (click)="toggleShowDiv('Mahishmati')" (click)="onSwitch('Clans')" class="w-44">
-        <button
-          class="inline-flex justify-center w-full bg-green bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-sm font-medium font-sans  text-white focus:outline-none "
-          id="options-menu" aria-haspopup="true" aria-expanded="true">
-          <input type="text" [disabled]="true" name="fieldName"
-            class="w-full text-white bg-green font-sans  cursor-pointer" ngDefaultControl
-            [(ngModel)]="singleelementofdropDownforClans">
-            <img [@animationRotate]="clansStatus"  class=" h-5 w-5" src="../../../assets/arrownewwhite.svg">
-        </button>
-      </div>
-      <!-- ring-1 ring-black ring-opacity-5  -->
-      <div [@slideInOut]="animationformahishmathidropdown"
-        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white font-sans  ">
-        <div (click)="changeoptionforClans(values)" *ngFor="let values of dropDownforClans" class="py-1" role="menu"
-          aria-orientation="vertical" aria-labelledby="options-menu">
-          <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 cursor-pointer"
-            role="menuitem">{{values}}</a>
-        </div>
-      </div>
-    </div>
-  </ngt-dropdown-clans>
-  <!-- End code for Clans dropdown in selector ngt-dropdown-clans -->
-
-
-  <!-- code for Languages dropdown in selector ngt-dropdown-languages -->
-  <ngt-dropdown-languages>
-    <div class="relative pl-32 py-16 inline-block text-left ">
-      <div (click)="toggleShowDiv('Language')" (click)="onSwitch('languages')" class="w-60">
-        <button
-          class="flex flex-row justify-center w-full bg-gray-100 bg-opacity-100 rounded-full shadow-sm px-4 py-2 bg-white font-sans  text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none "
-          id="options-menu" aria-haspopup="true" aria-expanded="true">
-          <input type="text" [disabled]="true" name="fieldName" class="w-full text-black-200 font-sans  cursor-pointer"
-            ngDefaultControl [(ngModel)]="singleelementofdropDownforLanguages">
-            <img [@animationRotate]="languagesStatus"  (click)="toggleShowDiv('languages')"  class=" h-5 w-5 " src="../../../assets/arrownew.svg">
-        </button>
-      </div>
-      <div [@slideInOut]="animationforlanguagedropdown"
-        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white font-sans  ">
-        <div (click)="changeoptionforPrograms(values)" *ngFor="let values of dropDownforLanguages" class="py-1"
-          role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
-          <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 cursor-pointer"
-            role="menuitem">{{values}}</a>
-        </div>
-      </div>
-    </div>
-
-  </ngt-dropdown-languages>
-  <!-- End code for Languages dropdown in selector ngt-dropdown-languages -->
-
-  <!-- code for Posts dropdown in selector ngt-dropdown-posts -->
-  <ngt-dropdown-posts>
-    <div class="relative pl-32 py-32  inline-block w-3/6 ">
-      <div class="flex flex-wrap content-center">
-        <button type="button"
-          class="flex flex-wrap content-center  justify-left w-full h-20 bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-md font-bold text-white hover:bg-blue focus:outline-none font-sans "
-          id="options-menu" aria-haspopup="true" aria-expanded="true">
-          <div
-            class="font-bold text-2xl text-blue rounded-full bg-white flex items-center justify-center font-sans  font-mono w-10 h-10 px-4 py-4">
-            P</div>
-          <div class="flex flex-col ">
-            <span class="px-4 font-sans ">Python Programming</span>
-            <span class="text-xs font-medium text-gray inline-flex px-4 font-sans ">1000+ Posts</span>
-          </div>
-          <img [@animationRotate]="postStatus" (click)="onSwitch('post')" (click)="toggleShowDiv('Post')"  class="ml-auto mt-3 h-5 w-5 mr-4 " src="../../../assets/menu.svg">
-          <!-- <svg class="-mr-1 ml-10 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-              <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
-            </svg> -->
-        </button>
-      </div>
-
-      <div [@slideInOut]="animationforpostdropdown">
-        <img class="origin-top-right absolute right-0  -mt-7 mr-6 " src="../../../assets/Component 983 – 1.svg">
-        <div
-          class="focus:outline-none origin-top-right absolute right-0 z-40 w-32 -mt-5 mr-4 rounded-md shadow-lg font-sans  bg-white">
-          <div *ngFor="let values of dropDownarratPost" class="py-1" role="menu" aria-orientation="vertical"
-            aria-labelledby="options-menu">
-            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
-              role="menuitem">{{values}}</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </ngt-dropdown-posts>
-  <!-- End code for Posts dropdown in selector ngt-dropdown-posts -->
-
-
-  <ngt-dropdown-profile>
-    <div class="relative pl-64 py-16 inline-block text-left ">
-      <div (click)="toggleShowDiv('Profile')" (click)="onSwitch('profile')">
-        <button type="button"
-          class="flex flex-row px-4 py-2 bg-white text-sm font-medium font-sans text-white focus:outline-none "
-          id="options-menu" aria-haspopup="true" aria-expanded="true">
-          <img class="h-30 w-30" src="../../../assets/Rectangle 2.svg">
-          <span class="px-4 text-md mt-3 font-medium text-black-200 mr-4 font-sans">
-            Vamsi Krishna
-          </span>
-          <img [@animationRotate]="profileStatus" class="mt-5" src="assets/chevron-right-solid.svg">
-        </button>
-      </div>
-      <div [@slideInOut]="animationforprofiledropdown">
-        <img   style="bottom: 7rem;" class=" absolute right-0  -mt-4 mr-2" src="assets/Polygon 1.svg">
-        <div style="width: 150px;bottom: 7.5rem;"
-          class="absolute right-0 bg-blue -mt-2 rounded-md shadow-lg bg-opacity-100 ">
-          <div *ngFor="let values of dropDownarratProfile" class="py-1 " role="menu" aria-orientation="vertical"
-            aria-labelledby="options-menu">
-            <div class="flex flex-row">
-              <img *ngIf="values=='My Profile'" class=" mr-5 h-30 w-30 ml-6" src="../../../assets/user-solid.svg">
-              <img *ngIf="values=='Settings'" class=" mr-5 h-30 w-30 ml-6" src="../../../assets/cog-solid.svg">
-              <img *ngIf="values=='Buddies'" class=" mr-4 h-30 w-30 ml-6" src="../../../assets/user-friends-solid.svg">
-              <img *ngIf="values=='Clans'" class=" mr-4 h-30 w-30 ml-6" src="../../../assets/clanimage.svg">
-              <img *ngIf="values=='Logout'" class=" mr-5 h-30 w-30 ml-6" src="../../../assets/sign-out-alt-solid.svg">
-              <a href="#" class="block  py-2 text-sm text-white" role="menuitem">{{values}}</a>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </ngt-dropdown-profile>
-</ngt-dropdown>
