--- a/src/app/ngt-components/dropdown/dropdown.component.html
+++ b/src/app/ngt-components/dropdown/dropdown.component.html
@@ -1,4 +1,4 @@
-<ng-content select="ngt-dropdown-programmig"></ng-content>
+<!-- <ng-content select="ngt-dropdown-programmig"></ng-content>
 
 <ng-content select="ngt-dropdown-New"></ng-content>
 
@@ -9,4 +9,4 @@
 
 <ng-content select="ngt-dropdown-posts"></ng-content>
 
-<ng-content select="ngt-dropdown-profile"></ng-content>
+<ng-content select="ngt-dropdown-profile"></ng-content> -->
